fixed nav menu collapse/data-toggle functionality

--- a/src/app/nav-menu/nav-menu.component.css
+++ b/src/app/nav-menu/nav-menu.component.css
@@ -1,3 +1,8 @@
 nav.navbar {
     background-color:white;
- }
+}
+
+.fixed-top {
+    padding-left:5rem;
+    padding-right:5rem; 
+}
